# linguagem-spam

./: README.md  dados_da_linguagem.md  exemplo.spam  functions.txt  pyproject.toml
spam/: __main__.py  grammar.lark  parser.py  runtime.py
tests/: test_simple.py
