[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "spam"
dist-name = "spam-lang"
author = "Spam Group"
author-email = "ailamar.alvesg@gmail.com, mam.macacod@gmail.com, pedrovscella@gmail.com, s.paula1906@gmail.com "
home-page = "http://github.com/fabiommendes/lispy/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "click",
    "lark-parser",
]


[tool.flit.scripts]
spam = "spam.__main__:main"
